@@ -1,5 +1,9 @@
 2007-02-06  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.h (__attribute__): Remove define.
+
+2007-02-06  Dalibor Topic  <robilad@kaffe.org>
+
 	* Makefile.am (fastjar_CPPFLAGS): Removed.
 	(grepjar_SOURCES) Added shift.c and shift.h.
 
